[workspace]

members = [
    "2021/day01",
    "2021/day02",
    "2021/day03",
    "2021/day04",
    "2021/day05",
    "2021/day06",
    "2021/day07",
    "2021/day08",
    "2021/day09",
    "2021/day10",
    "2021/day11",
    "2021/day12",
    "2021/day13",
    "2021/day14",
    "2021/day15",
    "2021/day16",
    "2021/day17",
]
